<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2012 Square, Inc. -->

<resources>
  <string name="day_name_format">EEE</string>
  <string name="invalid_date">Date must be between %1$s and %2$s.</string>
  <string name="month_name_format">MMMM yyyy</string>
  <string name="previous">&lt;</string>
  <string name="next">&gt;</string>
  <string name="add_event">新增活動</string>
  <string name="add_event_plus">"   +  "</string>
  <string name="back">返回</string>
  <string name="add_event_label">日程编辑</string>
  <string name="done">完成</string>
  <string name="from">從</string>
  <string name="to">到</string>
  <string name="event_title">主題:</string>
  <string name="event_date">日期:</string>
  <string name="event_reminder">提醒:</string>
  <string name="noth">無</string>
  <string name="Attendees">參與者:</string>
  <string name="description">描述:</string>
  <string name="new_event">新建事件</string>
  <string name="event_title_hint">标题</string>
  <string name="edit">編輯</string>
  <string name="delete">剷除</string>
  <string name="delete_event">删除事件</string>
</resources>
