<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F9E0D9"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F5F5F5" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_margin="7dp"
            android:background="@drawable/head_button"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/back" />

        <TextView
            android:id="@+id/head_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_event_label"
            android:textColor="#000000"
            android:textSize="17sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_margin="7dp"
            android:background="@drawable/head_button_default_drawable"
            android:gravity="center"
            android:onClick="done"
            android:text="@string/done" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/from"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/choose_date"
                android:onClick="showDatePicker"
                android:textColor="#000000" />

            <Button
                android:id="@+id/from_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="1dp"
                android:layout_weight="2"
                android:background="@drawable/choose_date"
                android:onClick="showTimePicker"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/to"
            android:textSize="16sp"
            tools:ignore="ObsoleteLayoutParam" />

        <LinearLayout
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/to_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/choose_date"
                android:onClick="showDatePicker"
                android:textColor="#000000" />

            <Button
                android:id="@+id/to_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="1dp"
                android:layout_weight="2"
                android:background="@drawable/choose_date"
                android:onClick="showTimePicker"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>