<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9E0D9"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/prev"
            style="@style/CalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#00ffffff"
            android:paddingLeft="10dp"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/title"
            style="@style/CalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="SelectableText" />

        <Button
            android:id="@+id/next"
            style="@style/CalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00ffffff"
            android:paddingRight="10dp"
            android:text="@string/next" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weekRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CalendarCell.DayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clipToPadding="false" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/addEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/CalendarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dp"
                android:text="@string/add_event" />

            <TextView
                android:id="@+id/add_textview"
                style="@style/CalendarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:text="@string/add_event_plus" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addEvent"
            android:paddingTop="10dp" >
        </ListView>
    </RelativeLayout>

</LinearLayout>